--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@ collaboration and easy access to study materials.
 <section id="creditsSection">
 <h2>💻 Credits</h2>
 <p>
-<strong>Name:</strong> Ajay C<br>
+<strong>Name:</strong> Jawahar R<br>
 <strong>Department:</strong> AI & DS<br>
-<strong>E-mail for enquiries:</strong> <a href="mailto:ajaymukesh1737@gmail.com">ajaymukesh1737@gmail.com</a>
+<strong>E-mail for enquiries:</strong> <a href="mailto:j26219096@gmail.com">j26219096@gmail.com</a>
 </p>
 </section>
 
